--- a/projek.css
+++ b/projek.css
@@ -1,47 +1,80 @@
-body {
-    margin: 0px;
-    background-color: white;
-  }
-  
+body{
+  font-family: sans-serif;
+  background-image: url('https://wallpaperaccess.com/full/895.jpg');
+  background-size: cover;
+}
+div {
+  margin-top: -15px;
+}
+.container {
+  width: 800px;
+  margin: auto;
+  margin-top: 50px;
+  padding: 0 14px;
+  box-sizing: border-box;
+}
+.header {
+  width: 100%;
+  background-color: royalblue;
+  text-align: center;
+  padding: 20px 0;
+  color: #fff;
+}
+.content {
+  background-color: #fff;
+  padding: 50px 50px 50px 30px;
+  line-height: 24px;
+}
+.content span {
+  color: red;
+  font-weight: bold;
+}
+label {
+  display: block;
+  padding: 10px 0;
+}
+.form-row {
+  padding-right: 40px;
+  margin-bottom: 50px;
+}
+.full-input {
+  width: 100%;
+  margin-left: 18px;
+  padding: 12px;
+}
+input[type=radio] {
+  margin-left: 18px;
+  margin-right: 8px;
+  margin-bottom: 14px;
+}
+.italic {
+  margin-left: 18px;
+  margin-top: -10px;
+  font-size: 14px;
+  font-style: italic;
+  color: #555;
+}
+.short-input {
+  width: 100px;
+  margin: 0 18px 0 0;
+  padding: 12px;
+}
+.form-submit {
+  margin-top: 100px;
+}
+.form-submit button {
+  padding: 14px 38px;
+  background-color:#006DB2;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.form-submit button:hover {
+  background-color: #008272;
+}
 
-  
-  /* FORM CONTAINER */
-  
-
-  .blog-S {
-    display: flex;
-    justify-content: center;
+@media(max-width: 768px) {
+  .container {
+    width: 100%;
   }
-  
-  .form-container {
-    width: 400px;
-  }
-  
-  .section-title {
-    text-align: center;
-  }
-  
-  .date {
-    display: flex;
-    flex-direction: column;
-    box-sizing: content-box;
-    gap: 50px;
-  }
-  .form-field {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    gap: 10px;
-  }
-  
-  .form-label {
-    font-size: 20px;
-    margin-top: 10px;
-    gap: 80px;
-  }
-  
-  .form-input {
-    border-radius: 5px;
-    border: 1px solid #cacaca;
-    padding: 10px;
-  }
+}
